--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -107,6 +107,9 @@
                             <h3 class="font-medium">{{product.name}}</h3>
                             <div class="text-sm text-gray-500">Quantity: {{quantity}}</div>
                             <input type="hidden" id="quantity" name="quantity" value="{{quantity}}">
+                            <input type="hidden"  name="size" value="{{size}}">
+                            <input type="hidden"  name="color" value="{{color}}">
+                            <input type="hidden"  name="other" value="{{other}}">
                             <div class="font-medium">Tk {{product.discount_price}}</div>
                         </div>
                     </div>
