--- a/templates/home.html
+++ b/templates/home.html
@@ -105,7 +105,7 @@
                     <div class="bg-white rounded-lg overflow-hidden shadow-lg">
                         <img src="{{f.product.featured_image.url}}" alt="{{f.product.name}}" class="w-full h-36 md:h-52 object-cover">
                         <div class="p-3">
-                            <h3 class="text-sm font-medium line-clamp-2 mb-1">{{f.product.name}}</h3>
+                            <h3 class="text-sm font-medium line-clamp-2 mb-1">{{f.product.name|truncatewords:3}}</h3>
                             <p class="text-primary font-bold">৳{{f.product.price}}</p>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                     <div class="bg-white rounded-lg overflow-hidden">
                         <img src="{{product.featured_image.url}}" alt="Denso Cool Gear Cabin Filter" class="w-full h-36 md:h-52 object-cover">
                         <div class="p-2">
-                            <h3 class="text-sm font-medium line-clamp-2 mb-1">{{product.name}}</h3>
+                            <h3 class="text-sm font-medium line-clamp-2 mb-1">{{product.name|truncatewords:3}}</h3>
                             <p class="text-primary font-bold">৳{{product.price}}</p>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
             <div class="bg-white rounded-lg overflow-hidden">
                 <img src="{{product.featured_image.url}}" alt="Denso Cool Gear Cabin Filter" class="w-full h-36 md:h-52 object-cover">
                 <div class="p-2">
-                    <h3 class="text-sm font-medium line-clamp-2 mb-1">{{product.name}}</h3>
+                    <h3 class="text-sm font-medium line-clamp-2 mb-1">{{product.name|truncatewords:3}}</h3>
                     <p class="text-primary font-bold">৳{{product.price}}</p>
                 </div>
             </div>
