--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
 
    
     <!-- Category Navigation -->
-    <div class="bg-white border-b shadow-sm relative">
+    <div class="bg-white border-b shadow-sm relative overflow-x-scroll">
         <div class="container mx-auto px-4">
             <div class="flex items-center whitespace-nowrap">
                
