--- a/templates/test.html
+++ b/templates/test.html
@@ -563,6 +563,39 @@
                 <!-- Main Content Section -->
                 <div class="row">
                     <div class="col" style="flex: 3;">
+                        <!-- Price & Stock Section -->
+                        <div class="card">
+                            <h2>Price & Stock</h2>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="form-group">
+                                        <label class="required">Stock Quantity</label>
+                                        <input type="number" class="form-control" id="stock-qty" name="stock_qty" placeholder="Stock Quantity">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-group">
+                                        <label class="required">Regular Price</label>
+                                        <input type="number" class="form-control" id="regular-price" name="regular_price" placeholder="Regular Price">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="form-group">
+                                        <label>Sale Price</label>
+                                        <input type="number" class="form-control" id="sale-price" name="sale_price" placeholder="Sale Price">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-group">
+                                        <label>Purchase Price</label>
+                                        <input type="number" class="form-control" id="purchase-price" name="purchase_price" placeholder="Purchase Price">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Variations Section -->
                         <div class="card">
                             <h2>Variations</h2>
