--- a/templates/home.html
+++ b/templates/home.html
@@ -263,7 +263,7 @@
 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
     {% for product in products %}
     <a href="/product/{{product.slug}}">
-        <div class="flex-none w-36 md:w-64">
+        <div class="flex-none w-36 md:w-64 my-2">
             <div class="bg-white rounded-lg overflow-hidden">
                 <img src="{{product.featured_image.url}}" alt="Denso Cool Gear Cabin Filter" class="w-full h-36 md:h-52 object-cover">
                 <div class="p-2">
